added: server added: custom post req added: addMany

--- a/src/app/components/users-dashboard/users-dashboard.component.html
+++ b/src/app/components/users-dashboard/users-dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="actions-container">
     <div class="adders">
         <button (click)="addOneUser()" role="button" class="button green"> Add One </button>
-        <button (click)="updateOneUser()" role="button" class="button green"> Add Many </button>
+        <button (click)="addManyUsers()" role="button" class="button green"> Add Many </button>
         <button (click)="updateOneUser()" role="button" class="button green"> Add All </button>
     </div>
     <div class="removers">
