--- a/src/app/components/users-dashboard/users-dashboard.component.scss
+++ b/src/app/components/users-dashboard/users-dashboard.component.scss
@@ -1,8 +1,9 @@
 .cards-container {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 1rem;
-    padding: 2rem;
+    padding-bottom: 1rem;
 }
 
 /* CSS */
@@ -37,11 +38,11 @@
 .actions-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 1rem;
     padding-top: 1rem;
+    padding-bottom: 1rem;
     padding-left: 1rem;
-    padding-bottom: 0.5rem;
-
 }
 
 .adders {
