Added: update and upsertion without be calls

--- a/src/app/components/users-dashboard/users-dashboard.component.html
+++ b/src/app/components/users-dashboard/users-dashboard.component.html
@@ -12,9 +12,9 @@
     </div>
     <div class="updaters">
         <button (click)="updateOneUser()" role="button" class="button yellow"> update One </button>
-        <button (click)="updateOneUser()" role="button" class="button yellow"> update Many </button>
-        <button (click)="updateOneUser()" role="button" class="button yellow"> upsert one </button>
-        <button (click)="updateOneUser()" role="button" class="button yellow"> upsert many </button>
+        <button (click)="updateManyUsers()" role="button" class="button yellow"> update Many </button>
+        <button (click)="upsertOneUser()" role="button" class="button yellow"> upsert one </button>
+        <button (click)="upsertManyUsers()" role="button" class="button yellow"> upsert many </button>
     </div>
   </div>
   <div class="cards-container">
